# vkjit

./: .gitmodules  Cargo.toml
libs/vkjit-core/: Cargo.toml
libs/vkjit-core/src/: array.rs  internal.rs  iterators.rs  lib.rs  spv.rs  test.rs  vartype.rs
libs/vkjit-core/src/backend/: mod.rs  vulkan.rs
libs/vkjit-core/src/backend/vulkan/: buffer.rs  device.rs  mod.rs
libs/vkjit-python/: Cargo.toml  pyproject.toml
libs/vkjit-python/src/: functions.rs  lib.rs  types.rs
libs/vkjit-rust/: Cargo.toml
libs/vkjit-rust/src/: functions.rs  lib.rs  types.rs
src/: array.rs  buffer.rs  device.rs  gen.rs  internal.rs  ir.rs  kernel.rs  klir.rs  main.rs  test.rs
