[package]
name = "vkjit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspirv = "*"
spirv = "*"
ash = {version = "0.37", features = [ "linked" ]}
raw-window-handle = "0.4"
vk-sync = "0.1.6"
gpu-allocator = "0.18"
