[package]
name = "vkjit03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspirv = "0.11.0+1.5.4"
screen-13 = {version = "0.7.1"}
glam = "0.22"
crevice = {version = "0.12.0", features = ["glam"]}
bytemuck = "1.12.3"
log = "0.4"
pretty_env_logger = "0.4"
spirq = "0.6"
inline-spirv = "0.1.5"
