[package]
name = "vkjit-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vkjit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.0", features = ["extension-module"] }
vkjit-core = { path = "../vkjit-core" }
lazy_static = "1.4.0"
paste = "1.0.11"
